--- a/style.css
+++ b/style.css
@@ -33,13 +33,43 @@ body .progress_inner #step-1:checked + input + input + input + input + div + div
   margin: 0;           
   padding: 0;          
   display: block;       
-  margin: auto;         
+  
 }
-.btnprix{
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
+#nextNone{
+  background: #7d888e;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  width: 70px;
+ 
+}
+#cover{
+  
+  position: absolute;
+  top: 292px;
+  background: #02385500;
+  width: 100%;
+  height: 300px;
+  display: none;
+ 
+ 
+}
+#coverGr{
+  background: #023855;
+  height: 300px;
+  z-index: 1000;
+
+}
+.ResultatDeDecherche{
+ 
+  margin-bottom: 10px;
+ 
+ 
+}
+.ResultatDeDecherche:hover{
+ 
+  transform: scale(1.03);
 }
 
 
@@ -403,4 +433,17 @@ body .progress_inner input[type=radio] {
 
 .qr-code img {
     width: 55%;
+}
+
+
+
+
+.progress_inner__step::after{
+  content: '';
+  width: 100%;
+  height: 100%;
+  /* background-color: red; */
+  position: absolute;
+  top: -20px;
+  left: 0px;
 }
